--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
       context: .
       dockerfile: dockerfile
     ports:
-      - "80:80"
+      - "81:80"
     volumes:
       #- ./index.php:/var/www/html/index.php
       - .:/var/www/html/
@@ -19,10 +19,10 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: laravel_tasklist_retriver
-      MYSQL_USER: root
-      MYSQL_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-root}
+      MYSQL_DATABASE: ${MYSQL_DATABASE:-laravel_tasklist_retriever}
+      MYSQL_USER: ${MYSQL_USER:-root}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD:-root}
     ports:
       - "3306:3306"
     volumes:
@@ -33,7 +33,7 @@ services:
     container_name: adminer_container
     restart: unless-stopped
     ports:
-      - "8080:8080"
+      - "8081:8080"
 
 volumes:
   db_data:
